--- a/src/style.css
+++ b/src/style.css
@@ -1,80 +1,75 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+*{
+  font-family: 'Inter', sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.font-sora{
+  font-family: "Sora",sans-serif!important;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.navbar-side{
+  top: 0;
+  position: sticky;
+  position: -webkit-sticky;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.shadow-1 {
+  --tw-shadow: 0px 10px 10px -5px rgba(29,30,32,.05),0px 10px 25px -5px rgba(29,30,32,.1);
+  --tw-shadow-colored: 0px 10px 10px -5px var(--tw-shadow-color),0px 10px 25px -5px var(--tw-shadow-color);
+  box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 10px -5px #1d1e200d, 0 10px 25px -5px #1d1e201a;
+  box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.container-class {
+  width: 100%;
 }
 
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@media only screen and (min-width: 460px){
+  .container-class {
+    width: 430px;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@media only screen and (min-width: 640px){
+  .container-class {
+    width: 610px;
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+@media only screen and (min-width: 768px){
+  .container-class {
+    width: 730px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .container-class {
+    width: 990px;
+  }
+}
+
+
+@media only screen and (min-width: 1280px) {
+  .container-class {
+    width: 1140px;
+  }
+}
+
+
+
+@media only screen and (min-width: 1536px) {
+  .container-class {
+    width: 1140px;
+  }
+}
+@media only screen and (min-width: 1536px) {
+  .container-background {
+    width: 1140px;
   }
 }
